--- a/tests/bsim/bluetooth/host/adv/set_adva/app/prj.conf
+++ b/tests/bsim/bluetooth/host/adv/set_adva/app/prj.conf
@@ -14,7 +14,7 @@ CONFIG_BT_L2CAP_TX_MTU=200
 CONFIG_BT_MAX_CONN=2
 CONFIG_BT_MAX_PAIRED=2
 CONFIG_BT_PERIPHERAL=y
-CONFIG_BT_PRIVACY=y
+CONFIG_BT_PRIVACY=n
 CONFIG_BT_SETTINGS=y
 CONFIG_BT_SMP=y
 CONFIG_BT_TESTING=y
